Fixed deplouyment issue with Fastly by updating Fastly CLI and configuration

--- a/static/templates/click.html
+++ b/static/templates/click.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Mocktioneer Click</title>
+  <title>mocktioneer Click</title>
   <style>
     html,body{margin:0;padding:0;font-family:system-ui,sans-serif}
     .wrap{padding:2rem}
@@ -13,7 +13,7 @@
   </head>
 <body>
   <div class="wrap">
-    <h1>Mocktioneer</h1>
+    <h1>mocktioneer</h1>
     <p>Click received.</p>
     <ul>
       <li>crid: <code>{{CRID}}</code></li>
