--- a/static/templates/creative.html
+++ b/static/templates/creative.html
@@ -6,13 +6,14 @@
   <title>Mocktioneer {{W}}x{{H}}</title>
   <style>
     html,body{margin:0;padding:0;height:100%}
-    a,img{display:block;border:0}
+    a{display:block;border:0;text-decoration:none;color:inherit}
     .container{width:100%;height:100%}
+    .creative-img{width:100%;height:100%;object-fit:contain;display:block}
   </style>
 </head>
 <body>
-  <a id="clk" href="/click" target="_blank" class="container">
-    <img src="/static/img/{{W}}x{{H}}.svg" alt="Mocktioneer {{W}}x{{H}}" style="width:100%;height:100%;object-fit:contain;">
+  <a id="clk" href="/click" target="_blank" class="container" aria-label="Open mocktioneer {{W}} by {{H}} creative">
+    <img class="creative-img" src="/static/img/{{W}}x{{H}}.svg" alt="mocktioneer {{W}}x{{H}}">
   </a>
   <script>
     (function(){
