--- a/static/templates/iframe.html
+++ b/static/templates/iframe.html
@@ -1,1 +1,7 @@
-<iframe src="//{{HOST}}/static/creatives/{{W}}x{{H}}.html?crid={{CRID}}&bid={{BID}}" width="{{W}}" height="{{H}}" frameborder="0" scrolling="no"></iframe>
+<iframe
+  src="//{{HOST}}/static/creatives/{{W}}x{{H}}.html?crid={{CRID}}&bid={{BID}}"
+  width="{{W}}"
+  height="{{H}}"
+  frameborder="0"
+  scrolling="no"
+></iframe>
