--- a/crates/mocktioneer-core/static/templates/creative.html.hbs
+++ b/crates/mocktioneer-core/static/templates/creative.html.hbs
@@ -9,7 +9,9 @@
       body {
         margin: 0;
         padding: 0;
+        width: 100%;
         height: 100%;
+        overflow: hidden;
       }
       a {
         display: block;
@@ -20,6 +22,7 @@
       .container {
         width: 100%;
         height: 100%;
+        overflow: hidden;
       }
       .creative-img {
         width: 100%;
