--- a/crates/mocktioneer-core/static/templates/iframe.html.hbs
+++ b/crates/mocktioneer-core/static/templates/iframe.html.hbs
@@ -1,5 +1,5 @@
 <iframe
-  src="//{{HOST}}/static/creatives/{{W}}x{{H}}.html?crid={{CRID}}&bid={{BID}}"
+  src="//{{HOST}}/static/creatives/{{W}}x{{H}}.html?crid={{CRID}}&bid={{BID}}{{#if SIG}}&sig={{SIG}}{{/if}}"
   width="{{W}}"
   height="{{H}}"
   frameborder="0"
