simplify to always include metadata with one hbs template

--- a/crates/mocktioneer-core/static/templates/iframe.html.hbs
+++ b/crates/mocktioneer-core/static/templates/iframe.html.hbs
@@ -1,7 +1,10 @@
-<iframe
+<!-- MOCKTIONEER_METADATA
+{{{METADATA_JSON}}}
+-->
+<div style="position:relative;display:inline-block;width:{{W}}px;height:{{H}}px"><iframe
   src="//{{HOST}}/static/creatives/{{W}}x{{H}}.html?crid={{CRID}}&bid={{BID}}{{#if SIG}}&sig={{SIG}}{{/if}}"
   width="{{W}}"
   height="{{H}}"
   frameborder="0"
   scrolling="no"
-></iframe>
+></iframe></div>
